@@ -53,6 +53,7 @@ Version 2.0.0 FINAL - The "Tiku - the one and only" version.
 		by blue_eclipse).
 		* On Mac, enabled Command-clicking in lists to toggle selection.
 		* Fixed an endianness bug with webserver
+		* Fixed last (I hope!) endianness bug with IPFilter
 
 	volpol
 		* Patch to fix use of deprecated functions in wxGTK-2.5.3.
